# redev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  adios2_bp4.yaml  adios2_sst.yaml  config.cmake.in  redev.cpp  redev.h  redev_adios_channel.h  redev_assert.cpp  redev_assert.h  redev_bidirectional_comm.h  redev_channel.h  redev_comm.h  redev_exclusive_scan.h  redev_partition.h  redev_profile.cpp  redev_profile.h  redev_scan.h  redev_strings.cpp  redev_strings.h  redev_time.cpp  redev_time.h  redev_types.h  redev_variant_tools.h  refactorTodo.md  runMultipleMpiJobs.sh  test_1d.cpp  test_classPtn.cpp  test_classPtnGather.cpp  test_global_comm.cpp  test_init.cpp  test_initPtnObjOwnership.cpp  test_pingpong.cpp  test_profile.cpp  test_query.cpp  test_rcb.cpp  test_send.cpp  test_sendOneToTwo.cpp  (+8 more)
.github/workflows/: cmake.yml  docs.yml
cmake/: CheckGit.cmake  redev_git_version.cpp.in  redev_git_version.h  removeAdiosFiles.cmake  removeBpFiles.cmake  runTwoMpiJobs.cmake
docs/: .buildinfo  Doxyfile  Doxyfile.in  conf.py  deploy.sh  environment.yaml  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/_sources/: index.rst.txt
docs/_sources/api/: cpp_doxygen_sphinx.rst.txt
docs/_sources/concepts/: index.rst.txt
docs/_sources/examples/: index.rst.txt  twoClients.rst.txt
docs/api/: cpp_doxygen_sphinx.html  cpp_doxygen_sphinx.rst  index.html
docs/concepts/: index.html
docs/examples/: index.html  sendRecv.html  twoClients.html
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/api/: cpp_doxygen_sphinx.rst.txt  index.rst.txt
docs/html/api/: cpp_doxygen_sphinx.html  index.html
docs/html/concepts/: index.html
docs/html/examples/: index.html  sendRecv.html  twoClients.html
docsDoxySphinx/: Doxyfile  Doxyfile.185  README.md  conf.py  deploy.sh  environment.yaml  index.rst  requirements.txt  setupPythonEnv.sh
docsDoxySphinx/api/: cpp_doxygen_sphinx.rst
docsDoxySphinx/examples/: sendRecv.rst
example/build_cmake_installed/: CMakeLists.txt  main.cpp
